# monitor-tui

./: .gitignore  Cargo.toml  README.md
src/: debug.rs  lib.rs  main.rs  monitor.rs  tui.rs  xrandr.rs
src/tests/: mod.rs  monitor_tests.rs  monitors.rs  tui.rs  tui_tests.rs
tests/: test_monitor.rs  test_tui.rs
