[package]
name = "monitor_tui"
description = "A terminal user interface for organising monitors"
homepage = "https://github.com/joshfelm/monitor-tui"
documentation = "https://github.com/joshfelm/monitor-tui"
repository = "https://github.com/joshfelm/monitor-tui"
keywords = ["monitor", "tui", "cli", "terminal"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.26"
num-traits = "0.2"
num-derive = "0.4"
itertools = "0.10"
ratatui = "0.29.0"

[lib]
name = "monitor_tui"
path = "src/lib.rs"
